--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,7 +63,7 @@ input:focus::placeholder {
 }
 
 .filter-div {
-  margin-top: 45px;
+  margin-top: 25px;
 }
 
 .row {
@@ -92,26 +92,61 @@ input:focus::placeholder {
   border-radius: 4px;
   background-color: white;
   color: black;
-  font-style: Montserrat;
-  font-size: 15px;
-  font-weight: semi-bold;
+  font-style: "Montserrat";
+  font-size: 18px;
+  font-weight: 500;
   padding: 8px;
-  height: 60px;
+  height: 50px;
   text-align: center;
-  width: 200px;
+  width: 180px;
   margin: auto;
-  box-shadow: 0 0 10px #000;
+  box-shadow: 5px 5px 5px grey;
+  margin-top: 20px;
+  // #b2bce0;
 }
 
 .mapboxgl-ctrl-geocoder {
   max-width: none;
   width: 100%;
+  height: 45px;
   border: 1px solid lightgrey;
   box-shadow: none;
   background-color:#dedaf3;
+  color: grey;
+  border-radius: 10px;
 }
 
-// .mb-3.string.required.venues_address2 {
+.venues_address1 {
+  position: relative;
+  z-index: 1000;
+}
+
+// .address-one{
 //   position: relative;
 //   z-index: -1;
 // }
+
+// .mb-3.string.required.venues_address2 {
+// color: grey;
+// }
+
+// .mapboxgl-ctrl-geocoder--input {
+//   // position: relative;
+//   // z-index: -1;
+// }
+
+.mapboxgl-ctrl-geocoder--icon.mapboxgl-ctrl-geocoder--icon-search{
+  // display: none;
+  // background-image: url("img/address_marker.jpg");
+}
+
+#filter-text{
+  color: white;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+  font-family: "Nunito", "Helvetica", "sans-serif";
+  line-height: 1.2;
+  margin: 0;
+  margin-top: 30px;
+}
