--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -3,3 +3,13 @@
   background-size: cover;
   height: 100vh;
 }
+
+.sign-up-button {
+  position: absolute;
+  top: 700px;
+  left: 168px;
+}
+
+.sign-up-button a {
+  text-decoration: none;
+}
