--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -13,3 +13,10 @@
 .sign-up-button a {
   text-decoration: none;
 }
+
+.sign-in-button {
+  position: absolute;
+  top: 782px;
+  left: 110px;
+  color: white;
+}
