--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,6 @@
 <div class="landing-image">
-  <div class="sign-up-button btn btn-flat">
-    <%= link_to "Sign Up", home_path %>
+  <div>
+    <%= link_to "Sign Up", home_path, class: "sign-up-button btn btn-flat" %>
+    <%= link_to "Already have an account? Sign in", home_path, class: "sign-in-button" %>
   </div>
 </div>
