--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
       <%= simple_form_for :venues, url: venues_path, method: :get, data: { controller: "disable-button", action: "submit->disable-button#disable" } do |f| %>
         <%= f.input :address1,
           placeholder: "Address 1", label: false,
-          input_html: { data: { geocoder_target: "address", disable_button_target: "address1" }, class: "d-none" },
+          input_html: { data: { geocoder_target: "address", disable_button_target: "address1", action: "keyup->disable-button#retry"}},
           wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: 'pk.eyJ1Ijoic2FjaGltcCIsImEiOiJja3o4bTg5eGQxa2owMndyeHZhamEwYTB4In0.NEtS_jJ9WE8Pz0uCVoXzzw' } } %>
 
         <%= f.input :address2,
@@ -83,3 +83,9 @@
     </div>
   </div>
 </div>
+
+
+<script>
+  const addresses = document.querySelectorAll(".mapboxgl-ctrl-geocoder--input");
+  console.log(addresses);
+</script>
