--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -61,7 +61,7 @@
 
 
              <li><%= image_tag "internet-icon.png", class: "icon" %><%= @venue.website %></li>
-              <li><%= image_tag "map-icon.png", class: "icon" %><a href="<%= @venue.google_maps_url %>">Open Google Maps</a></li>
+             <li><%= image_tag "map-icon.png", class: "icon" %><a href="<%= @venue.google_maps_url %>" target="_blank" >Open Google Maps</a></li>
 
 
             </ul>
