updated button and form on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,7 +70,7 @@
               <h2>Parks</h2>
             </div>
 
-            <%= f.button :submit, "Meet Halfway!", class: "btn btn-primary" %>
+            <%= f.button :submit, "Meet Halfway!", class: "btn " %>
           </div>
         </div>
 
