changed title tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%= favicon_link_tag asset_path("destination.ico") %>
-    <title>Halfway</title>
+    <title>Halfway - the easy way to meet your friends halfway!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
