--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -11,8 +11,9 @@
   position: sticky;
   top: 0;
   align-items: center;
-  margin: 5px;
+  // margin: 5px;
   border-radius: 25px;
+  margin: 5px 10px 8px 10px;
 }
 
 .mapbox {
