--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,7 @@
 <!--get the map put into a id map-->
 <!--take the card product from le wagon -->
 <!--within the product card need to add extra features like ratings,icons -->
+
 <div class="mapbox-container">
   <div class="mapbox", style="width: 100%; height: 350px;"
     data-controller="mapbox"
@@ -19,8 +20,9 @@
         <p><i class="fas fa-map-marker-alt"></i> <%= venue.address %></p>
 
           <p><%= "⭐️" * (venue.rating || 0) %></p>
-          <p><strong><%= "£" * venue.price_range %></strong></p>
 
+          <p><%= "£" * venue.price_range %></strong></p>
+<!--
         <div class="icons">
           <div class="d-flex justify-content-right">
             <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
@@ -31,6 +33,23 @@
             <% end %>
           </div>
        </div>
+-->
+
+        <div class="share-icon">
+          <div class="d-flex justify-content-right">
+            <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
+          </div>
+       </div>
+
+       <div class="heart-icon">
+        <% if Favourite.exists?(venue_id: venue.id) %>
+              <%= link_to "", favourite_path(venue.favourites.first), method: :delete, class: "fas fa-heart"%>
+            <% else %>
+              <%= link_to "", favourites_path(venue.id), method: :post, class: "far fa-heart big-icon", :remote => true %>
+            <% end %>
+       </div>
+
+
       </div>
     </div>
     <% end %>
