removed an unnecessary div

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,8 +38,7 @@
 
       <p id="filter-text">Select your filters</p>
 
-        <div class="filter-div">
-          <div class="row mx-auto">
+          <div class="filter-div row mx-auto">
             <div class="card col-md mb-2">
               <%= image_tag "coffee.jpg" %>
               <h2>Coffee</h2>
@@ -72,7 +71,6 @@
 
             <%= f.button :submit, "Meet Halfway!", class: "btn " %>
           </div>
-        </div>
 
         <div class="button-div text-center">
           <%#= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
