--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,8 @@
     <div class="footer">
-    <div class="footer-links">
-        <%= link_to "", favourites_path, class: "fas fa-heart" %>
-        <%= link_to "", home_path, class: "fas fa-home"  %>
-        <i class="fas fa-user"></i>
-        <%#= link_to "", user_path(current_user.id), class: "fas fa-user" %>
+        <div class="footer-links">
+            <%= link_to "", favourites_path, class: "fas fa-heart" %>
+            <%= link_to "", home_path, class: "fas fa-home"  %>
+            <i class="fas fa-user"></i>
+            <%#= link_to "", user_path(current_user.id), class: "fas fa-user" %>
+        </div>
     </div>
