changed text in filter select p

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
           data: { geocoder_target: "address" }, class: "d-none"%>
         <%#= form.hidden_field :address1, input_html: { data: { "..." }, class: "d-none" } %>
 
-        <p id="filter-text">Select your filters</p>
+        <p id="filter-text">Choose an activity:</p>
 
             <div class="filter-div row mx-auto">
               <div class="card col-md mb-2">
