--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,8 @@
           data: { geocoder_target: "address" }, class: "d-none"%>
         <%#= form.hidden_field :address1, input_html: { data: { "..." }, class: "d-none" } %>
 
-        <p id="filter-text">Choose an activity:</p>
+        <%# filters %>
+        <!--<p id="filter-text">Choose an activity:</p>
 
             <div class="filter-div row mx-auto">
               <div class="card col-md mb-2">
@@ -69,13 +70,17 @@
                 <%= image_tag "parks.jpg" %>
                 <h2>Parks</h2>
               </div>
-
-              <%= f.button :submit, "Meet Halfway!", class: "btn " %>
+              -->
+              <div class= "halfway-button">
+                <%= f.button :submit, "Meet Halfway!", class: "btn" %>
+              </div>
             </div>
 
+           <!--
           <div class="button-div text-center">
             <%#= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
           </div>
+           -->
         <% end %>
       </div>
     </div>
