--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="img-div text-center">
-    <%= image_tag "halfway_logo.png" %>
+    <%= image_tag "Larger_halfway_logo.svg" %>
   </div>
   <div class="mobile-positioning-home">
     <div class="heading-div">
