--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -14,3 +14,19 @@
   text-align: center;
   padding-top: 20px;
 }
+
+.login-form h2 {
+  font-size: 42px;
+  border-bottom: 2px dashed lightgray;
+  padding-bottom: 20px;
+}
+
+.login-button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+.form-check {
+  margin: 0;
+}
