cover and repeat the background

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,9 +81,7 @@ label {
     background-color: #9b9ae5;
     font-family: "Montserrat", sans-serif;
     background: url(Homepage.png);
-    background-size: 395px;
-    background-repeat: no-repeat;
-    background-size: 395px 750px;
+    background-size: cover;
   }
 
   .img-div {
